feat enable organization plan changes
